src/test/resources/examples/failing/acm-28.t
http://dx.doi.org/10.1145/53990.54007

Uncapitalized noun in title.  Month flips between jun and jul.
WARNING: Possibly incorrectly capitalized noun 'scheme' in title
@inproceedings{Shivers:1988:control:10.1145/53990.54007,
  author = {Shivers, Olin},
  title = {Control flow analysis in scheme},
  booktitle = {Proceedings of the ACM SIGPLAN 1988 Conference on Programming Language Design and Implementation},
  series = {PLDI~'88},
  location = {Atlanta, Georgia, USA},
  pages = {164--174},
  numpages = {11},
  month = jul,
  year = {1988},
  publisher = {Association for Computing Machinery},
  address = {New York, NY, USA},
  isbn = {0-89791-269-1},
  doi = {10.1145/53990.54007},
  bib_scrape_url = {http://dx.doi.org/10.1145/53990.54007},
  abstract = {Traditional flow analysis techniques, such as the ones typically employed by optimizing Fortran compilers, do not work for Scheme-like languages. This paper presents a flow analysis technique {---} \textit{control flow analysis} {---} which is applicable to Scheme-like languages. As a demonstration application, the information gathered by control flow analysis is used to perform a traditional flow analysis problem, induction variable elimination. Extensions and limitations are discussed.
{\par}
The techniques presented in this paper are backed up by working code. They are applicable not only to Scheme, but also to related languages, such as Common Lisp and ML.},
}
